<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/stdInfo"
        android:textColor="#000000"
        android:textSize="40dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonPressed"
        android:tag="viewButton"
        android:text="@string/btnView" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonPressed"
        android:tag="addButton"
        android:text="@string/btnAdd" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonPressed"
        android:tag="updateButton"
        android:text="@string/btnUpdate" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonPressed"
        android:tag="deleteButton"
        android:text="@string/btnDelet" />
</android.widget.LinearLayout>